--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-24 Wed 18:08]
+#+CAPTION: Clock summary at [2018-10-25 Thu 08:18]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *71:18* |       |       |   0.0 |
+| *Total time*                                                                | *72:47* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 71:18   |       |       |   0.0 |
-| Active                                                                      |         | 71:18 |       |   0.0 |
+| Stories                                                                     | 72:47   |       |       |   0.0 |
+| Active                                                                      |         | 72:47 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  1:23 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
@@ -50,7 +50,7 @@
 | Design a top-level Dogen API                                                |         |       | 14:46 |   0.0 |
 | Add support for nested namespaces                                           |         |       |  6:24 |   0.0 |
 | Read up on framework and API design                                         |         |       |  4:34 |   0.0 |
-| Update dogen namespaces to match the new specification                      |         |       |  8:28 |   0.0 |
+| Update dogen namespaces to match the new specification                      |         |       |  9:57 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  1:58 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -845,6 +845,9 @@ names.
 
 *** STARTED Update dogen namespaces to match the new specification    :story:
     :LOGBOOK:
+    CLOCK: [2018-10-25 Thu 08:07]--[2018-10-25 Thu 08:18] =>  0:11
+    CLOCK: [2018-10-24 Wed 19:12]--[2018-10-24 Wed 19:41] =>  0:29
+    CLOCK: [2018-10-24 Wed 18:09]--[2018-10-24 Wed 18:58] =>  0:49
     CLOCK: [2018-10-24 Wed 17:11]--[2018-10-24 Wed 18:08] =>  0:57
     CLOCK: [2018-10-24 Wed 17:04]--[2018-10-24 Wed 17:10] =>  0:06
     CLOCK: [2018-10-24 Wed 15:42]--[2018-10-24 Wed 17:03] =>  1:21
